tests/snapshots/ui_snapshots__connecting_filter.snap
---
source: tests/ui_snapshots.rs
expression: render_to_string(&app)
---
"╭ ● Connecting ────────────────────────────────────────────────────────────────╮"
"│ Conn   active 0  reading 0  writing 0  waiting 0                             │"
"│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│"
"│ RPS  0/s                                               │  req  0             │"
"│ IN   0 B/s                                             │  rx  0 B            │"
"│ OUT  0 B/s                                             │  tx  0 B            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Filter Zones · (no data) ────────────────────────────────────────────────────╮"
"│waiting for first VTS snapshot…                                               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"F1Help F4Filter F5Sort F10Quit  Tab:Zone Enter:Detail                           "
