tests/snapshots/ui_snapshots__detail_overlay_server.snap
---
source: tests/ui_snapshots.rs
expression: render_to_string(&app)
---
"╭ ● · be32e97af5b7 · up 0m 42s ────────────────────────────────────────────────╮"
"│ Conn   active 1  reading 0  writing 1  waiting 0                             │"
"│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│"
"│ RPS  510/s       │  req  8.5 K                                               │"
"│ IN   44.5 KB/s   │  rx  743.0 KB                                             │"
"│ OUT  84.0 KB/s   │  tx  1.4 MB                                               │"
"╰───────────────────┌ zone: api.example.test ──────────────┐───────────────────╯"
"╭ Server Zones · 4 ─│Average request_msec only: ~0ms       │───────────────────╮"
"│  ZONE             │           No histogram data          │N/s      OUT/s     │"
"│▶ *                │                                      │4.5 KB/s 84.0 KB/s │"
"│  _                │                                      │7.2 KB/s 29.7 KB/s │"
"│  api.example.test │                                      │4.8 KB/s 29.7 KB/s │"
"│  web.example.test │                                      │2.5 KB/s 24.6 KB/s │"
"│                   │                                      │                   │"
"│                   │                                      │                   │"
"│                   │                                      │                   │"
"│                   │1xx 0  2xx 3008  3xx 0  4xx 0  5xx 0  │                   │"
"│                   └──────────────────────────────────────┘                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"F1Help F4Filter F5Sort F10Quit  Tab:Zone Enter:Detail                           "
