tests/snapshots/ui_snapshots__disconnected_filter.snap
---
source: tests/ui_snapshots.rs
expression: render_to_string(&app)
---
"╭ ● Disconnected (5) · be32e97af5b7 · up 0m 42s ───────────────────────────────╮"
"│ Conn   active 1  reading 0  writing 1  waiting 0                             │"
"│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│"
"│ RPS  510/s                                             │  req  8.5 K         │"
"│ IN   44.5 KB/s                                         │  rx  743.0 KB       │"
"│ OUT  84.0 KB/s                                         │  tx  1.4 MB         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Filter Zones · 2 ────────────────────────────────────────────────────────────╮"
"│  ZONE                RPS↓   2xx%   4xx%   5xx%   p95      IN/s      OUT/s    │"
"│▶ country::*/US         120   99.9%   0.0%   0.0%    ~0ms   9.9 KB/s 19.9 KB/s│"
"│  country::*/JP        59.9   99.7%   0.1%   0.2%    ~0ms   4.9 KB/s  9.9 KB/s│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"HTTP 500 Internal Server Error                                                  "
"F1Help F4Filter F5Sort F10Quit  Tab:Zone Enter:Detail                           "
