tests/snapshots/ui_snapshots__disconnected_upstream.snap
---
source: tests/ui_snapshots.rs
expression: render_to_string(&app)
---
"[Disconnected]  consecutive failures: 5                                         "
"Conn ████████1/1 ████████  active 1  reading 0  writing 1  waiting 0            "
"RPS                                                    0/s          5xx 0.00%   "
"in                          0 B/s       out                         0 B/s       "
"ZONE       RPS      2xx%    4xx%    5xx%    p95      IN/s      OUT/s     STATE  "
"backend_ap 90.1     100.0%  0.0%    0.0%    ~0ms     7.4 KB/s  14.9 KB/s up     "
"backend_ap 90.0     100.0%  0.0%    0.0%    ~0ms     7.4 KB/s  14.9 KB/s up     "
"backend_we 0        —       —       —       ~0ms     0 B/s     0 B/s     up     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"HTTP 500 Internal Server Error                                                  "
"F1Help F4Filter F5Sort F10Quit  Tab:Zone Enter    Sort: RPS ↓                   "
