tests/snapshots/ui_snapshots__help_overlay.snap
---
source: tests/ui_snapshots.rs
assertion_line: 128
expression: render_to_string(&app)
---
"Conn ████████1/1 ████████  active 1  reading 0  writing 1  waiting 0            "
"RPS  █                                                               510/s      "
"in   █                                                              44.5 KB/s   "
"out  █                                                              84.0 KB/s   "
"ZON┌ vozltop — key bindings ────────────────────────────────────────────────┐   "
"*  │F1 / ?            open or close this help                               │/s "
"_  │Tab / S-Tab       switch zone type (Server / Upstream / Cache / Filter) │/s "
"api│Up / Down         move row cursor (also: k / j)                         │/s "
"web│PgUp / PgDn       page up / down                                        │/s "
"   │Enter             open zone detail overlay                              │   "
"   │Esc               close detail / clear filter / close help              │   "
"   │F4 / /            filter zones by substring                             │   "
"   │F5                reverse sort direction                                │   "
"   │1 – 9             choose sort column (tab-specific)                     │   "
"   │[ / ]             switch host (multi-host; also Shift+H / Shift+L)      │   "
"   │F10 / q / Ctrl-C  quit                                                  │   "
"   │                                                                        │   "
"   │macOS Terminal.app intercepts F1-F4; use letter aliases:                │   "
"   │  ? = F1   / = F4   q = F10                                             │   "
"   └────────────────────────────────────────────────────────────────────────┘   "
"                                                                                "
"                                                                                "
"                                                                                "
"F1Help F4Filter F5Sort F10Quit  Tab:Zone Enter    Sort: RPS ↓                   "
