tests/snapshots/ui_snapshots__multi_host_running_server.snap
---
source: tests/ui_snapshots.rs
expression: render_workspace_to_string(&ws)
---
"HOST  [web-prod-1]  web-prod-2  edge-tokyo                                      "
"╭ ● · be32e97af5b7 · up 0m 42s ────────────────────────────────────────────────╮"
"│ Conn   active 1  reading 0  writing 1  waiting 0                             │"
"│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│"
"│ RPS ██████████████████████████████████████ 510/s       │  req  8.5 K         │"
"│ IN  ████████████████████▏░░░░░░░░░░░░░░░░░ 44.5 KB/s   │  rx  743.0 KB       │"
"│ OUT ██████████████████████████████████████ 84.0 KB/s   │  tx  1.4 MB         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Server Zones · 4 ────────────────────────────────────────────────────────────╮"
"│   ZONE        RPS↓     2xx%    4xx%    5xx%    p95      IN/s       OUT/s     │"
"│▶  *               510  100.0%    0.0%    0.0%     ~0ms  44.5 KB/s  84.0 KB/s │"
"│   _               180  100.0%    0.0%    0.0%     ~0ms  17.2 KB/s  29.7 KB/s │"
"│   api.example     180  100.0%    0.0%    0.0%     ~0ms  14.8 KB/s  29.7 KB/s │"
"│   web.example     150  100.0%    0.0%    0.0%     ~0ms  12.5 KB/s  24.6 KB/s │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"F1Help F4Filter F5Sort F10Quit  Tab:Zone Enter:Detail                           "
