tests/snapshots/ui_snapshots__running_cache.snap
---
source: tests/ui_snapshots.rs
expression: render_to_string(&app)
---
"╭ ● · be32e97af5b7 · up 0m 42s ────────────────────────────────────────────────╮"
"│ Conn   active 1  reading 0  writing 1  waiting 0                             │"
"│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│"
"│ RPS  510/s       │  req  8.5 K                                               │"
"│ IN   44.5 KB/s   │  rx  743.0 KB                                             │"
"│ OUT  84.0 KB/s   │  tx  1.4 MB                                               │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Cache Zones · 1 ─────────────────────────────────────────────────────────────╮"
"│  ZONE       HIT%↓  MISS  EXPIR STALE USED                 IN/s      OUT/s    │"
"│▶ demo_cache 100.0%     1     0     0 4.0 KB / 8.0 MB (0%)  9.8 KB/s 19.8 KB/s│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"F1Help F4Filter F5Sort F10Quit  Tab:Zone Enter:Detail                           "
